Cambio de textos y enlaces

--- a/Prueba viajes Chile/index.html
+++ b/Prueba viajes Chile/index.html
@@ -132,7 +132,7 @@
         <img src="assets/img/card3.jpg" class="card-img-top" alt="ciudadhermosa">
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
       </div>
 
@@ -140,7 +140,7 @@
         <img src="assets/img/card2.jpg" class="card-img-top" alt="ciudadhermosa">
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
       </div>
 
@@ -148,7 +148,7 @@
         <img src="assets/img/card1.jpg" class="card-img-top" alt="ciudadhermosa">
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
       </div>
 
@@ -156,7 +156,7 @@
         <img src="assets/img/card4.jpg" class="card-img-top" alt="ciudadhermosa">
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
       </div>
 
@@ -208,10 +208,10 @@
       <h1 class="d-flex justify-content-around viajechile">Viajes Chile
 
         <div>
-          <i class="fa-brands fa-square-github"></i>
-          <i class="fa-brands fa-linkedin"></i>
-          <i class="fa-brands fa-square-twitter"></i>
-          <i class="fa-brands fa-square-facebook"></i>
+          <a href="https://github.com/NatitaCM/pruebafinal" style="color:#FFF;" target="blank"><i class="fa-brands fa-square-github"></i></a> 
+          <a href="https://www.linkedin.com/" style="color:#FFF;" target="blank"><i class="fa-brands fa-linkedin"></i></a>
+          <a href="https://twitter.com/home" style="color:#FFF;" target="blank"><i class="fa-brands fa-square-twitter"></i></a>
+          <a href="https://web.facebook.com/" style="color:#FFF;" target="blank"><i class="fa-brands fa-square-facebook"></i></a>
         </div>
       </h1>
 
